# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: README.md  cli_parser.py  data_parsers.py  generate_diff.py  stylish.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
tests/: test_gendiff.py
tests/fixtures/: json_result.txt
